[package]
name = "mercury-escrow-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercury_escrow_v1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = [
    "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
solana-program = "=1.14.16"
# anchor-lang = "0.27.0"
